fixed dark mode

--- a/styles.css
+++ b/styles.css
@@ -45,21 +45,18 @@
 :root {
     --background-color: #fffff8;
     --text-color: #111;
-    --link-color: #151515;
     --image-filter: none;
 }
 
 html[data-theme='light'] {
     --background-color: #fffff8;
     --text-color: #111;
-    --link-color: #151515;
     --image-filter: none;
 }
 
 html[data-theme='dark'] {
     --background-color: #1a2535;
     --text-color: #ddd;
-    --link-color: #1a2535;
     --image-filter: invert(100%);
 }
 
@@ -313,14 +310,14 @@ a:link,
     a:link,
     .tufte-underline,
     .hover-tufte-underline:hover {
-        text-shadow: 0.03em 0 var(--link-color), -0.03em 0 var(--link-color), 0 0.03em var(--link-color), 0 -0.03em var(--link-color), 0.06em 0 var(--link-color), -0.06em 0 var(--link-color), 0.09em 0 var(--link-color), -0.09em 0 var(--link-color), 0.12em 0 var(--link-color), -0.12em 0 var(--link-color), 0.15em 0 var(--link-color), -0.15em 0 var(--link-color);
+        text-shadow: 0.03em 0 var(--background-color), -0.03em 0 var(--background-color), 0 0.03em var(--background-color), 0 -0.03em var(--background-color), 0.06em 0 var(--background-color), -0.06em 0 var(--background-color), 0.09em 0 var(--background-color), -0.09em 0 var(--background-color), 0.12em 0 var(--background-color), -0.12em 0 var(--background-color), 0.15em 0 var(--background-color), -0.15em 0 var(--background-color);
     }
 }
 
 a:link::selection,
 a:link::-moz-selection {
-    text-shadow: 0.03em 0 var(--link-color), -0.03em 0 var(--link-color), 0 0.03em var(--link-color), 0 -0.03em var(--link-color), 0.06em 0 var(--link-color), -0.06em 0 var(--link-color), 0.09em 0 var(--link-color), -0.09em 0 var(--link-color), 0.12em 0 var(--link-color), -0.12em 0 var(--link-color), 0.15em 0 var(--link-color), -0.15em 0 var(--link-color);
-    background: var(--link-color);
+    text-shadow: 0.03em 0 var(--background-color), -0.03em 0 var(--background-color), 0 0.03em var(--background-color), 0 -0.03em var(--background-color), 0.06em 0 var(--background-color), -0.06em 0 var(--background-color), 0.09em 0 var(--background-color), -0.09em 0 var(--background-color), 0.12em 0 var(--background-color), -0.12em 0 var(--background-color), 0.15em 0 var(--background-color), -0.15em 0 var(--background-color);
+    background: var(--background-color);
 }
 
 
